<resources>
    <string name="app_name">Fantasy Football App</string>
    <string name="name_your_team">Name Your Team</string>
    <string name="enter_team_name">Enter Team Name</string>
    <string name="continue_to_pick_team">Continue To Pick Team</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="fantasy_football_app">Fantasy Football App</string>
    <string name="create_team">Create Team</string>
    <string name="view_leaderboard">View Leaderboard</string>
    <string name="team_name">Team Name</string>
    <string name="player_name">Player Name</string>
    <string name="GK">GK</string>
    <string name="clear_slot">Clear Slot</string>
    <string name="filled_0_15">Filled: %1$d / 15</string>
    <string name="pick_team">Pick Team</string>
    <string name="pick_position">Pick a %1$s</string>
    <string name="empty_tap_to_pick">Empty — tap to pick a %1$s</string>
    <string name="slot_title">Slot %1$d • %2$s</string>
    <string name="no_available_players">No available %1$s players</string>
    <string name="confirm_team_title">Confirm Team</string>
    <string name="confirm_team_message">
%1$s

\n%3$s

</string>
    <string name="starting_xi">Starting XI</string>
    <string name="bench">Bench</string>
    <string name="def_john_smith_club">DEF • John Smith • Club</string>
    <string name="_0_pts">0 pts</string>
    <string name="_0_0m">€0.0m</string>
    <string name="budget_100_0m">Budget: €100.0m</string>
    <string name="waterford_premier_league_logo">Waterford Premier League Logo</string>
    <string name="fantasy_waterford_premier_league">Fantasy Waterford Premier League</string>
    <string name="sign_in_to_fantasy_waterford_premier_league">Sign in to Fantasy Waterford Premier League</string>
    <string name="email_domain">email@domain.com</string>
    <string name="password">Password</string>
    <string name="contin">Continue</string>
    <string name="or">or</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_apple">Continue with Apple</string>
    <string name="no_account_join_now">No account? Join now</string>
    <string name="reset_password">Reset Password</string>
    <string name="already_have_account_sign_in">Already have an account? Sign in</string>
    <string name="terms_privacy_text">By clicking continue, you agree to our Terms of Service and Privacy Policy</string>
    <string name="signup_subtitle">Enter an email to sign up for this app</string>
    <string name="create_account">Create an account</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="log_out">Log Out</string>
    <string name="hello_user">Hello User</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="send_instructions">Enter your email address, and we\'ll send password reset instructions.</string>
    <string name="deadline">Tue 2 Dec\nDeadline</string>
    <string name="transfers">15\nTransfers</string>
    <string name="fixtures">Fixtures</string>
    <string name="league">League</string>
    <string name="transfers1">Transfers</string>
    <string name="haaland">Haaland</string>
    <string name="che">CHE (A)</string>
    <string name="DEF">DEF</string>
    <string name="MID">MID</string>
    <string name="STR">STR</string>
    <string name="league_table">League Table</string>
    <string name="_1">1</string>
    <string name="team">Team</string>
    <string name="_0">0</string>
    <string name="home">Home</string>
    <string name="fantasy">Fantasy</string>
    <string name="view_team">View Team</string>


</resources>