<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_your_team"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/edtTeamName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/enter_team_name"
        android:maxLines="1"
        android:layout_marginBottom="16dp"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/btnContinueToPickTeam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_to_pick_team" />

</LinearLayout>
