<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/pos"
        android:layout_width="30dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/_1"/>

    <TextView
        android:id="@+id/team"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:text="@string/team"/>

    <TextView
        android:id="@+id/played"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/_0"/>

    <TextView
        android:id="@+id/wins"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/_0"/>

    <TextView
        android:id="@+id/draws"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/_0"/>

    <TextView
        android:id="@+id/losses"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/_0"/>

    <TextView
        android:id="@+id/points"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/_0"/>

</LinearLayout>