<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#55A7FF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:id="@+id/imgLeagueLogo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/league_logo"
            android:contentDescription="@string/waterford_premier_league_logo"
            android:scaleType="fitCenter" />

<!--        <TextView-->
<!--            android:id="@+id/txtAppTitle"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/fantasy_waterford_premier_league"-->
<!--            android:textSize="20sp"-->
<!--            android:textStyle="bold"-->
<!--            android:textColor="#0B2B4C"-->
<!--            android:layout_marginTop="12dp"-->
<!--            android:layout_marginBottom="18dp" />-->

        <LinearLayout
            android:id="@+id/resetFormContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtResetTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_password"
                android:textSize="24sp"
                android:textColor="#0B2B4C"
                android:layout_marginBottom="14dp"
                android:paddingStart="90dp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/txtSendInstruct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_instructions"
                android:textSize="16sp"
                android:textColor="#0B2B4C"
                android:layout_marginBottom="14dp"
                android:paddingStart="5dp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/edtResetEmail"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:hint="@string/email_domain"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@drawable/bg_input_rounded" />

            <Button
                android:id="@+id/btnSubmitReset"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="14dp"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:backgroundTint="#0A3A67" />

            <Button
                android:id="@+id/btnCancelReset"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="10dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#0A3A67"
                android:backgroundTint="#F2F2F2" />

        </LinearLayout>

        <!-- Sent State  -->
        <LinearLayout
            android:id="@+id/sentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_marginTop="6dp">

            <TextView
                android:id="@+id/txtSentTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Check your email for instructions."
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#0B2B4C"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="6dp" />

<!--            <TextView-->
<!--                android:id="@+id/txtSentBody"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="12dp"-->
<!--                android:text="If an account exists for that email, we’ve sent password reset instructions."-->
<!--                android:textAlignment="center"-->
<!--                android:textSize="15sp"-->
<!--                android:textColor="#0B2B4C" />-->

            <Button
                android:id="@+id/btnBackToSignIn"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="16dp"
                android:text="Back to Sign In"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:backgroundTint="#0A3A67" />

            <TextView
                android:id="@+id/txtResend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:text="Resend Email"
                android:textStyle="bold"
                android:textColor="#0A3A67" />
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
